# atticlab-task

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests_and_checks.yml
artifacts/: checksums.txt  checksums_intermediate.txt  terra_test.wasm
contracts/token/: Cargo.toml  README.md
contracts/token/src/: contract.rs
contracts/vending_machine/: .gitignore  Cargo.toml  README.md
contracts/vending_machine/src/: contract.rs  error.rs  integration_test.rs  lib.rs  msg.rs  state.rs
examples/: schema.rs
schema/: all_beverages_details.json  all_beverages_response.json  beverage_info.json  execute_msg.json  query_msg.json
src/: contract.rs  error.rs  integration_test.rs  lib.rs  msg.rs  state.rs
